--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,1 +1,13 @@
-<div class="btn btn-success">hi</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3 col-sm-12 col-xs-12">HEHEH</div>
+    <% @fonts.each do |f| %>
+      <div class="col-md-3 col-sm-4 col-xs-6" style="padding: 15px;">
+        <h3><%= f.name %></h3>
+        <p style="<%= f.font_family %>">Font Family Text Wacky</p>
+        <p><%= f.weight %></p>
+        <p><%= f.styles_by %></p>
+      </div>
+    <% end %>
+  </div>
+</div>
