--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -2,3 +2,41 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+p:first-of-type {
+  font-size: 7px;
+}
+
+p:last-of-type {
+  font-size: 10px;
+}
+
+
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+.col-md-4 {
+  width: 100%;
+  height: 250px;
+}
+
+.box {
+  width: 300px;
+  height: 300px;
+  padding: 40px;
+}
+
+div.content {
+  margin-left: 250px;
+}
+
+div.side {
+    position: fixed;
+    height: 100%;
+    top: 0;
+    left: 0;
+    width: 280px;
+    padding: 10px;
+}
