--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,13 +1,15 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-3 col-sm-12 col-xs-12">HEHEH</div>
+<div class="content">
+  <div class="side">
+    <h1>upFont</h1>
+  </div>
+  <div id="fonts" class="transitions-enabled">
     <% @fonts.each do |f| %>
-      <div class="col-md-3 col-sm-4 col-xs-6" style="padding: 15px;">
-        <h3><%= f.name %></h3>
-        <p style="<%= f.font_family %>">Font Family Text Wacky</p>
+      <div class="box">
+        <h1 style="<%= f.font_family %>"><%= f.name %></h1>
         <p><%= f.weight %></p>
-        <p><%= f.styles_by %></p>
+        <p>Created by <%= f.styles_by %></p>
       </div>
     <% end %>
   </div>
 </div>
+
