Add styling to fonts and glyphicons

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -8,8 +8,14 @@
         <h1 style="<%= f.font_family %>"><%= f.name %></h1>
         <p><%= f.weight %></p>
         <p>Created by <%= f.styles_by %></p>
-        <%= f.get_upvotes.size %>
-        <%= link_to upvote_site_path(f), method: :post, class: "fa fa-arrow-circle-o-up fa-2x" do %><br>
+        <% if @voter.voted_for? f %>
+          <%= link_to upvote_site_path(f), method: :post, class: "fa fa-arrow-circle-o-up fa-2x liked" do %>
+        <% end %>
+          <p style="font-family: 'Montserrat', sans-serif; color: #E91E63;"><%= pluralize(f.get_upvotes.size, "vote") %></p>
+        <% else %>
+          <%= link_to upvote_site_path(f), method: :post, class: "fa fa-arrow-circle-o-up fa-2x" do %>
+        <% end %>
+          <p style="font-family: 'Montserrat', sans-serif;"><%= pluralize(f.get_upvotes.size, "vote") %></p>
         <% end %>
       </div>
     <% end %>
