--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -2,13 +2,37 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+h1 {
+  text-align: center;
+}
 
 p:first-of-type {
   font-size: 7px;
+  text-align: center;
+}
+
+p:nth-of-type(2) {
+  font-size: 10px;
+  text-align: center;
 }
 
 p:last-of-type {
-  font-size: 10px;
+  font-size: 15px;
+  text-align: center;
+}
+
+a {
+  margin: 50px 0px 0px 100px
+}
+
+.fa.fa-arrow-circle-o-up.fa-2x {
+  color: #bbb;
+  text-decoration: none;
+}
+
+.fa.fa-arrow-circle-o-up.fa-2x.liked {
+  color: #E91E63;
+  text-decoration: none;
 }
 
 
