add ajax call for votes

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -9,11 +9,11 @@
         <p><%= f.weight %></p>
         <p>Created by <%= f.styles_by %></p>
         <% if @voter.voted_for? f %>
-          <%= link_to upvote_site_path(f), method: :post, class: "fa fa-arrow-circle-o-up fa-2x liked" do %>
+          <%= link_to upvote_site_path(f), method: :post, class: "fa fa-arrow-circle-o-up fa-2x liked", id: f.id do %>
         <% end %>
           <p style="font-family: 'Montserrat', sans-serif; color: #E91E63;"><%= pluralize(f.get_upvotes.size, "vote") %></p>
         <% else %>
-          <%= link_to upvote_site_path(f), method: :post, class: "fa fa-arrow-circle-o-up fa-2x" do %>
+          <%= link_to upvote_site_path(f), method: :post, class: "fa fa-arrow-circle-o-up fa-2x", id: f.id do %>
         <% end %>
           <p style="font-family: 'Montserrat', sans-serif;"><%= pluralize(f.get_upvotes.size, "vote") %></p>
         <% end %>
