--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -19,20 +19,23 @@ p:nth-of-type(2) {
 p:last-of-type {
   font-size: 15px;
   text-align: center;
+  margin-bottom: 0px;
 }
 
 a {
-  margin: 50px 0px 0px 100px
+  margin: 20px 0px 0px 100px
 }
 
 .fa.fa-arrow-circle-o-up.fa-2x {
   color: #bbb;
   text-decoration: none;
+  margin-left: 46%;
 }
 
 .fa.fa-arrow-circle-o-up.fa-2x.liked {
   color: #E91E63;
   text-decoration: none;
+  margin-left: 46%;
 }
 
 
@@ -41,15 +44,11 @@ html, body {
     margin: 0;
 }
 
-.col-md-4 {
-  width: 100%;
-  height: 250px;
-}
-
 .box {
+  margin-top: 150px;
   width: 300px;
-  height: 300px;
-  padding: 40px;
+  height: 250px;
+  padding: 0px;
 }
 
 div.content {
@@ -57,10 +56,55 @@ div.content {
 }
 
 div.side {
-    position: fixed;
-    height: 100%;
-    top: 0;
-    left: 0;
-    width: 280px;
-    padding: 10px;
+  position: fixed;
+  height: 100%;
+  top: 0;
+  left: 0;
+  width: 280px;
+  padding: 10px;
+}
+
+.squares {
+  list-style-type: none;
+  text-align: center;
+  margin-right: 45px;
+}
+
+.squares>li {
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+}
+
+.red-square {
+  width: 20px;
+  height: 20px;
+  background-color: #F44336;
+  border-radius: 25px;
+  margin: 10px;
+
+}
+
+.green-square {
+  width: 20px;
+  height: 20px;
+  background-color: #8BC34A;
+  border-radius: 25px;
+  margin: 10px;
+}
+
+.yellow-square {
+  width: 20px;
+  height: 20px;
+  background-color: #FFEB3B;
+  border-radius: 25px;
+  margin: 10px;
+}
+
+.purple-square {
+  width: 20px;
+  height: 20px;
+  background-color: #673AB7;
+  border-radius: 25px;
+  margin: 10px;
 }
