--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -5,9 +5,15 @@
   <div id="fonts" class="transitions-enabled">
     <% @fonts.each do |f| %>
       <div class="box">
-        <h1 style="<%= f.font_family %>"><%= f.name %></h1>
+        <h1 id="<%= f.id %>" style="<%= f.font_family %>"><%= f.name %></h1>
         <p><%= f.weight %></p>
         <p>Created by <%= f.styles_by %></p>
+          <ul class="squares">
+            <li><div class="red-square" id="<%= f.id %>"></div></li>
+            <li><div class="green-square" id="<%= f.id %>"></div></li>
+            <li><div class="yellow-square" id="<%= f.id %>"></div></li>
+            <li><div class="purple-square" id="<%= f.id %>"></div></li>
+          </ul>
         <% if @voter.voted_for? f %>
           <a class="fa fa-arrow-circle-o-up fa-2x liked" id="<%= f.id %>" href="javascript: void(0)"></a>
           <p class="votes" style="font-family: 'Montserrat', sans-serif; color: #E91E63;"><%= pluralize(f.get_upvotes.size, "vote") %></p>
