--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,6 +1,11 @@
 <div class="content">
   <div class="side">
-    <h1>upFont</h1>
+    <h1 class="sideh1">font</h1>
+    <i class="fa fa-arrow-circle-up fa-2x"></i>
+    <ul class="left">
+      <li>Most Popular</li>
+      <li>Curator</li>
+    </ul>
   </div>
   <div id="fonts" class="transitions-enabled">
     <% @fonts.each do |f| %>
