refactor hovering colours

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -3,6 +3,7 @@
     <h1 class="sideh1">font</h1>
     <i class="fa fa-arrow-circle-up fa-2x"></i>
     <ul class="left">
+      <li>Latest</li>
       <li>Most Popular</li>
       <li>Curator</li>
     </ul>
