--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -130,7 +130,7 @@ i {
   margin-top: 80px;
 }
 
-.left>li {
+.left>li>a {
   margin: 10px 0px 0px 20px;
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
