--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -4,7 +4,7 @@
     <i class="fa fa-arrow-circle-up fa-2x"></i>
     <ul class="left">
       <li><%= link_to "Latest", "/" %></li>
-      <li><%= link_to "Most Popular", "/" %></li>
+      <li><%= link_to "Most Popular", site_most_popular_path %></li>
       <li><%= link_to "Curator", "#" %></li>
     </ul>
   </div>
@@ -28,9 +28,6 @@
         <% end %>
           <p class="votes" style="font-family: 'Montserrat', sans-serif;"><%= pluralize(f.get_upvotes.size, "vote") %></p>
         <% end %>
-
-
-
       </div>
     <% end %>
   </div>
