add react to project

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -130,6 +130,12 @@ i {
   margin-top: 80px;
 }
 
+.react-li {
+  margin: 0px 0px 0px -80px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+}
+
 .left>li>a {
   margin: 10px 0px 0px 20px;
   font-family: 'Raleway', sans-serif;
