--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -5,8 +5,15 @@
     <ul class="left">
       <li><%= link_to "Latest", "/" %></li>
       <li><%= link_to "Most Popular", site_most_popular_path %></li>
-      <%= react_component('Main', :prerender => true) %>
+      <li><%= link_to "Curator" %></li>
     </ul>
+    <div id="modal">
+      <img src="assets/bondi.jpg" alt=""><br>
+      <p><em>created by Michael Wilson</em></p>
+      <a href="https://www.facebook.com/michael.wilson.10485" target="_blank" class="fa fa-facebook fa-2x"></a>
+      <a href="mailto:1987wilsonm.mw@gmail.com?Subject=Hello" target="_top" class="fa fa-send fa-2x"></a>
+      <a href="https://github.com/Michaelwilsonm" target="_blank" class="fa fa-github fa-2x"></a>
+    </div>
   </div>
   <div id="fonts" class="transitions-enabled">
     <% @fonts.each do |f| %>
