--- a/app/views/site/most_popular.html.erb
+++ b/app/views/site/most_popular.html.erb
@@ -7,12 +7,12 @@
       <li><%= link_to "Most Popular", site_most_popular_path %></li>
       <li><%= link_to "Curator" %></li>
       <div id="modal">
-      <img src="assets/bondi.jpg" alt=""><br>
-      <p><em>created by Michael Wilson</em></p>
-      <a href="https://www.facebook.com/michael.wilson.10485" target="_blank" class="fa fa-facebook fa-2x"></a>
-      <a href="mailto:1987wilsonm.mw@gmail.com?Subject=Hello%20again" target="_top" class="fa fa-send fa-2x"></a>
-      <a href="https://github.com/Michaelwilsonm" target="_blank" class="fa fa-github fa-2x"></a>
-    </div>
+        <img src="../assets/bondi.jpg" alt=""><br>
+        <p><em>created by Michael Wilson</em></p>
+        <a href="https://www.facebook.com/michael.wilson.10485" target="_blank" class="fa fa-facebook fa-2x"></a>
+        <a href="mailto:1987wilsonm.mw@gmail.com?Subject=Hello%20again" target="_top" class="fa fa-send fa-2x"></a>
+        <a href="https://github.com/Michaelwilsonm" target="_blank" class="fa fa-github fa-2x"></a>
+      </div>
     </ul>
   </div>
   <div id="fonts" class="transitions-enabled">
