--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -22,9 +22,6 @@ p:last-of-type {
   margin-bottom: 0px;
 }
 
-a {
-  margin: 20px 0px 0px 100px
-}
 
 .fa.fa-arrow-circle-o-up.fa-2x {
   color: #bbb;
@@ -136,10 +133,16 @@ i {
   font-weight: 400;
 }
 
-.left>li>a {
+.left>li {
   margin: 10px 0px 0px 20px;
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
+  color: #F48FB1;
+}
+
+.left>li>a {
+  text-decoration: none;
+  color: black;
 }
 
 .hex {
