--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -3,7 +3,7 @@
     <h1 class="sideh1">font</h1>
     <i class="fa fa-arrow-circle-up fa-2x"></i>
     <ul class="left">
-      <li><%= link_to "Latest", "/" %></li>
+      <li><%= link_to_unless_current("Latest", { action: "index" }) %></li>
       <li><%= link_to "Most Popular", site_most_popular_path %></li>
       <li><%= link_to "Curator" %></li>
     </ul>
