--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -5,6 +5,7 @@
     <ul class="left">
       <li><%= link_to_unless_current("Latest", { action: "index" }) %></li>
       <li><%= link_to "Most Popular", site_most_popular_path %></li>
+      <li><%= link_to "Add Font", new_site_path %></li>
       <li><%= link_to "Curator" %></li>
     </ul>
     <div id="modal">
