--- a/app/views/site/new.html.erb
+++ b/app/views/site/new.html.erb
@@ -5,9 +5,9 @@
         <h1 class="sideh1">font</h1>
         <i class="fa fa-arrow-circle-up fa-2x"></i>
         <ul class="left">
-          <li><%= link_to_unless_current("Latest", { action: "index" }) %></li>
+          <li><%= link_to "Latest", "/" %></li>
           <li><%= link_to "Most Popular", site_most_popular_path %></li>
-          <li><%= link_to "Add Font", new_site_path %></li>
+          <li><%= link_to_unless_current("Add Font", { action: "new" })%></li>
           <li><%= link_to "Curator" %></li>
         </ul>
         <div id="modal">
