--- a/app/views/site/new.html.erb
+++ b/app/views/site/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-md-4 col-sm-4 col-xs-6">
       <div class="side">
@@ -52,4 +52,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
