--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -46,11 +46,11 @@ html, body {
 }
 
 .box {
+  margin: 70px 0px 140px 30px;
   margin-top: 70px;
   width: 280px;
-  height: 250px;
+  height: 230px;
   padding: 0px;
-  margin-bottom: 140px;
 }
 
 div.content {
@@ -210,3 +210,71 @@ i {
   left: 20px;
 }
 
+@media (max-width: 768px) {
+  .side {
+    display: none;
+  }
+
+  .top_ul {
+    font-size: 15px;
+    list-style-type: none;
+    margin-left: -35px;
+  }
+
+  .box {
+    margin-left: 50px;
+  }
+
+  div.content {
+    margin-left: 0;
+  }
+
+  .top {
+    background-color: #eee;
+    padding: 20px 20px 100px 20px;
+  }
+
+  .tainer {
+    float: right;
+    margin-top: -45px;
+    margin-right: 10px;
+    .fa {
+      margin-right: 20px;
+      margin-top: 5px;
+      color: black;
+      text-decoration: none;
+    }
+  }
+
+  img {
+    width: 120px;
+    height: 120px;
+    margin-top: -70px;
+    border-radius: 15%;
+  }
+
+  .top_ul {
+  list-style-type: none;
+  margin-top: 80px;
+  }
+
+  .top_ul>li {
+    margin: 10px 0px 0px 20px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    color: #F48FB1;
+  }
+
+  .top_ul>li>a {
+    text-decoration: none;
+    color: black;
+  }
+
+}
+
+
+@media (min-width: 768px) {
+  .top {
+    display: none;
+  }
+}
