--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,12 +1,27 @@
-<div class="content">
+<div class="top">
+  <ul class="top_ul">
+    <li><%= link_to_unless_current("Latest", { action: "index" }) %></li>
+    <li><%= link_to "Most Popular", site_most_popular_path %></li>
+    <li></li>
+    <li></li>
+  </ul>
+  <div class="tainer">
+    <img src="assets/bondi.jpg" alt=""><br>
+    <p><em>created by Michael Wilson</em></p>
+    <a href="https://www.facebook.com/michael.wilson.10485" target="_blank" class="fa fa-facebook fa-2x"></a>
+    <a href="mailto:1987wilsonm.mw@gmail.com?Subject=Hello" target="_top" class="fa fa-send fa-2x"></a>
+    <a href="https://github.com/Michaelwilsonm" target="_blank" class="fa fa-github fa-2x"></a>
+  </div>
+</div>
+  <div class="content">
   <div class="side">
     <h1 class="sideh1">font</h1>
     <i class="fa fa-arrow-circle-up fa-2x"></i>
     <ul class="left">
       <li><%= link_to_unless_current("Latest", { action: "index" }) %></li>
       <li><%= link_to "Most Popular", site_most_popular_path %></li>
-      <li></li>
       <li><%= link_to "Curator" %></li>
+      <li></li>
     </ul>
     <div id="modal">
       <img src="assets/bondi.jpg" alt=""><br>
