--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -211,6 +211,7 @@ i {
 }
 
 @media (max-width: 768px) {
+
   .side {
     display: none;
   }
@@ -272,9 +273,155 @@ i {
 
 }
 
-
 @media (min-width: 768px) {
   .top {
     display: none;
   }
+}
+
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+  .top {
+    display: block;
+  }
+
+  .side {
+    display: none;
+  }
+
+  .top_ul {
+    font-size: 55px;
+    list-style-type: none;
+    margin-left: -35px;
+  }
+
+  .box {
+    margin-left: 20px;
+  }
+
+  div.content {
+    margin-left: 0;
+  }
+
+  .top {
+    background-color: #eee;
+    padding: 20px 20px 100px 20px;
+  }
+
+  .tainer {
+    float: right;
+    margin-top: -45px;
+    margin-right: 0px;
+    .fa {
+      display: none;
+      margin-top: 10px;
+      color: black;
+      text-decoration: none;
+    }
+  }
+
+  img {
+    width: 310px;
+    height: 310px;
+    margin-top: -210px;
+    border-radius: 15%;
+  }
+
+
+  .top_ul {
+  list-style-type: none;
+  margin-top: 80px;
+  }
+
+  .top_ul>li {
+    margin: 10px 0px 0px 20px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    color: #F48FB1;
+  }
+
+  .top_ul>li>a {
+    text-decoration: none;
+    color: black;
+  }
+
+  p>em {
+    font-size: 25px;
+  }
+  .box>h1 {
+    font-size: 80px;
+  }
+
+  p:first-of-type {
+  font-size: 30px;
+  text-align: center;
+}
+
+  p:nth-of-type(2) {
+    font-size: 20px;
+    text-align: center;
+  }
+
+  p:last-of-type {
+    text-align: center;
+    margin-bottom: 0px;
+  }
+
+
+  .fa.fa-arrow-circle-o-up.fa-2x {
+    margin-top: 20px;
+    color: #bbb;
+    text-decoration: none;
+    margin-left: 46%;
+  }
+
+  .fa.fa-arrow-circle-o-up.fa-2x.liked {
+    margin-top: 20px;
+    color: #E91E63;
+    text-decoration: none;
+    margin-left: 46%;
+  }
+
+
+  .box {
+    margin: 70px 0px 140px 70px;
+    margin-top: 70px;
+    width: 370px;
+    height: 500px;
+    padding: 0px;
+  }
+
+
+  .fa.fa-arrow-circle-o-up.fa-2x {
+    margin-top: 20px;
+    color: #bbb;
+    text-decoration: none;
+    margin-left: 42%;
+    font-size: 80px;
+  }
+
+  .fa.fa-arrow-circle-o-up.fa-2x.liked {
+    margin-top: 20px;
+    color: #E91E63;
+    text-decoration: none;
+    margin-left: 42%;
+    font-size: 80px;
+  }
+
+  .votes {
+    font-size: 3m
+    0px;
+  }
+
+  .top_ul {
+    font-family: 'Raleway', sans-serif;
+  }
+
+
+
+
+
 }
